--- a/.docker/docker-compose.yml
+++ b/.docker/docker-compose.yml
@@ -9,9 +9,12 @@ services:
       - "15672:15672"
     networks:
       - faculty_network
+      - common_network
     env_file:
       - .env
 
 networks:
   faculty_network:
     driver: bridge
+  common_network:
+    external: true
