Fix configuration for kubernetes deployment.

--- a/.docker/Dockerfile
+++ b/.docker/Dockerfile
@@ -1,6 +1,8 @@
-FROM rabbitmq:3-management
+FROM rabbitmq:3.12-management
 
 COPY rabbitmq.conf /etc/rabbitmq
-COPY definitions.json /etc/rabbitmq
+COPY definitions.json /etc/rabbitmq/definitions.json
+
+ENV RABBITMQ_SERVER_ADDITIONAL_ERL_ARGS="-rabbitmq_management load_definitions \"/etc/rabbitmq/definitions.json\""
 
 RUN cat /etc/rabbitmq/rabbitmq.conf
