--- a/.docker/rabbitmq.conf
+++ b/.docker/rabbitmq.conf
@@ -6,7 +6,7 @@ management.load_definitions = /etc/rabbitmq/definitions.json
 
 default_vhost = faculty-vhost
 default_user = adam
-default_pass = password
+default_pass = changeme
 default_user_tags.administrator = true
 
 default_permissions.configure = .*
